# stress-imaging

./: .gitignore  analysis.py  app.py  config.toml  control_script.py  crop_images.py  image_process.py  main.py  polarizer_calib_routine.py  pyproject.toml  requirements.txt  utils.py
COMSOL/: analysis.py  plotting.ipynb  sxx.txt  sxy.txt  syy.txt
Devices/: LED_control.py  camera_automation.py  thorlabs_rotation_mount.py
Notebook/: phase_unwrap_demo.py
SAMPLE_DATA/: compressed_image_27_180.npy  compressed_image_data.npy  isoclinic_phase_55_361.npy
config/: angles_Ramesh.csv  rotation_mounts_SN.toml
modules/: image_process.py  phase_analysis.py  plotting_modules.py
