[project]
name = "stress-imaging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "plotly>=6.2.0",
    "pyautogui>=0.9.54",
    "streamlit>=1.46.1",
]
